changes for new return type in ClassEntry.getPrimaryEntries()